git: Changed the default editor to nano.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,6 @@
 [core]
 	excludesfile = /Users/zombie/.gitignore_global
+	editor = nano
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path =
